tests/snapshots/run_wpt_conformance__trtx_lesserOrEqual_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float16 1D constant tensors",
    "trtx",
    Failed {
        msg: Some(
            "lesser_or_equal :: lesserOrEqual float16 1D constant tensors: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [5.5, 1.7666015625, -2.81640625, -6.046875, 9.5, -2.1015625, -4.078125, 5.3125, 0.038726806640625, -0.307373046875, 4.9765625, 3.462890625, 8.609375, 1.513671875, 2.009765625, -0.310546875, -4.24609375, -3.55078125, -2.595703125, -5, 3.119140625, 9.703125, 9.546875, -6.19140625] (constant); inputA: [-8.28125, -3.21875, -6.54296875, -0.54052734375, -5.4140625, 5.58203125, 1.501953125, 6.59375, -9.921875, -7.13671875, -4.9140625, -9.140625, 9.40625, -9.828125, -2.01171875, -6.59765625, -8.265625, 8.28125, 1.6455078125, -1.486328125, -5, -0.9208984375, -9.4375, 9.8125] (constant)\n  expected output: [1, 1, 1, 0, 1, 0, 0, 0, 1, 1 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 1, 1, 0, 1, 0, 0, 0, 1, 1, ...] (len=24, shape=[24])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[24])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f16[24] @bytes([128, 69, 17, 63, 162, 193, 12, 198, 192, 72, 52, 192, 20, 196, 80, 69, 245, 40, 235, 180, 250, 68, 237, 66, 78, 72, 14, 62, 5, 64, 248, 180, 63, 196, 26, 195, 49, 193, 0, 197, 61, 66, 218, 72, 198, 72, 49, 198]);\n    operand_1: f16[24] @bytes([36, 200, 112, 194, 139, 198, 83, 184, 106, 197, 149, 69, 2, 62, 152, 70, 246, 200, 35, 199, 234, 196, 146, 200, 180, 72, 234, 200, 6, 192, 153, 198, 34, 200, 36, 72, 149, 62, 242, 189, 0, 197, 94, 187, 184, 200, 232, 72]);\n  }\n\n  nodes {\n    [output] = lesserOrEqual(operand_1, operand_0, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
