tests/snapshots/run_wpt_conformance__trtx_lesserOrEqual_float16_5D_inputs_with_alternating_broadcast_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float16 5D inputs with alternating broadcast axes",
    "trtx",
    Failed {
        msg: Some(
            "lesser_or_equal :: lesserOrEqual float16 5D inputs with alternating broadcast axes: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [1, 1, 0, 0]; inputA: [1, 0, 1, 0, 1, 0, 1, 0]\n  expected output: [1, 1, 1, 1, 1, 1, 1, 1, 0, 1 ...] (len=32)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=32)\n  expected output full nd:\n[1, 1, 1, 1, 1, 1, 1, 1, 0, 1, ...] (len=32, shape=[2, 2, 2, 2, 2])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[2, 1, 2, 1, 2];\n    inputB: f16[1, 2, 1, 2, 1];\n  }\n\n  nodes {\n    [output] = lesserOrEqual(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
